adicionando pela terceira vez

--- a/back/publish/appsettings.json
+++ b/back/publish/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=dbkaue.database.windows.net; Initial Catalog=dbgrupo1; User Id=userbanco; Password=Senai@132"
+    "Default": "Data Source=servidorgrupo1.database.windows.net; Initial Catalog=dbfofuxo; User Id=grupo1; Password=Senai@132"
   }
 }
