--- a/back/publish/appsettings.Development.json
+++ b/back/publish/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=dbkaue.database.windows.net; Initial Catalog=dbgrupo1; User Id=userbanco; Password=Senai@132"
+    "Default": "Data Source=servidorgrupo1.database.windows.net; Initial Catalog=dbfofuxo; User Id=grupo1; Password=Senai@132"
   }
 }
